--- a/web/src/app/company-payment/payment/payment.component.html
+++ b/web/src/app/company-payment/payment/payment.component.html
@@ -8,16 +8,16 @@
                         <h2>Payment Details </h2>
                     </div>
                     <div class="body">
-                        <form autocomplete="off" #f="ngForm">
+                        <form autocomplete="off" #f="ngForm" (ngSubmit)="onSubmit()">
                             <div class="row">
                                 <div class="col-xl-2 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Type</mat-label>
-                                        <mat-select name="reportType" placeholder="Select Payee Type"
+                                        <mat-select name="PaymentType" placeholder="Select Payee Type"
                                             [(ngModel)]="data.PaymentType" (selectionChange)="getPayeeList()" appAutoFoucsDirectives>
                                             <mat-option value="Vendor">Supplier</mat-option>
                                             <mat-option value="Fitter">Fitter</mat-option>
-                                            <!-- <mat-option value="Doctor">Doctor</mat-option> -->
+                                            <mat-option value="Doctor">Doctor</mat-option>
                                             <mat-option value="Employee">Employee</mat-option>
                                             <mat-option value="Customer">Customer</mat-option>
                                         </mat-select>
@@ -27,23 +27,19 @@
                                 <div class="col-xl-2 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payee Name</mat-label>
-                                        <mat-select name="PayeeID" [(ngModel)]=" data.CustomerID">
-                                            <mat-option>
-                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}"></ngx-mat-select-search>
-                                            </mat-option>
-                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList | nameFilter : searchValue ">
+                                        <mat-select name="PayeeID" [(ngModel)]=" data.PayeeName" (selectionChange)="getInvoicePayment(data)">
+                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList ">
                                                 {{s.Name}} 
-                                                <span style="float: right;">{{s.MobileNo1}}</span>
+                                                <span style="float: right;" *ngIf="s.MobileNo1 != 'null'">{{s.MobileNo1}}</span>
                                             </mat-option>
                                         </mat-select>
                                         <mat-error>Payee is required</mat-error>
                                     </mat-form-field>
-
                                 </div>
                                 <div class="col-xl-1 col-md-1 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Total DueAmt</mat-label>
-                                        <input matInput name="DueAmt" [(ngModel)]="data.PayableAmount" disabled
+                                        <input type="number" matInput name="DueAmt" [(ngModel)]="data.PayableAmount" disabled
                                             required #DueAmtcontrol>
                                         <mat-error>
                                             Payment required
@@ -51,29 +47,46 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-md-2 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
+                                    <mat-form-field class="example-full-width mb-0 ">
                                         <mat-label>Previous Credit</mat-label>
-                                        <input matInput name="CustomerCredit" disabled
-                                            [(ngModel)]="data.CustomerCredit" [autocomplete]="false"
-                                            #CustomerCreditcontrol>
+                                        <div class="row mt-0">
+                                            <div class="col-md-3 p-0" style="height: 16px;">
+                                                <mat-checkbox color="primary" style="margin-left: 10px;" name="applyCredit"
+                                                [(ngModel)]="data.applyCredit"></mat-checkbox>
+                                            </div>
+                                            <div class="col-md-9 p-0" style="height: 16px;">
+                                                <input type="number" matInput name="CustomerCredit" disabled
+                                                [(ngModel)]="data.CustomerCredit" [autocomplete]="false"
+                                                #CustomerCreditcontrol>
+                                            </div>
+                                        </div>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Pay Amount</mat-label>
-                                        <input matInput name="PaymentAmt" [(ngModel)]="data.PaidAmount" required
+                                        <input  type="number" matInput name="PaymentAmt" [(ngModel)]="data.PaidAmount" required
                                             #PaymentAmtcontrol>
                                         <mat-error>
                                             Payment required
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-md-2 col-sm-12 mb-0">
+                                <div *ngIf="data.PaymentType !== 'Customer'" class="col-xl-1 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
                                             #GSTTypecontrol1>
                                             <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList"> {{p.Name}} </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div *ngIf="data.PaymentType === 'Customer'" class="col-xl-1 col-md-2 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Payment Mode</mat-label>
+                                        <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
+                                            #GSTTypecontrol1>
+                                             <mat-option  value="Customer Return">Customer Return</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
@@ -94,13 +107,12 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-md-2 col-sm-12 mb-0">
-                                    <button [disabled]="!f.valid" type="submit" mat-raised-button color="primary">
+                                    <button [disabled]="!f.valid" type="submit" mat-raised-button color="primary" >
                                         Payment </button>
                                 </div>
                             </div>
                         </form>
                     <div>
-
                         <div class="body ">
                             <div class="col-sm-12" style="overflow: auto; height: 450px;">
                                 <table class="table table-striped table-hover table-sm table-bordered"
@@ -122,12 +134,25 @@
                                         </tr>
                                     </thead>
                                     <tbody class="text-center">
-                                       
+                                        <tr *ngFor="let data of invoiceList; let i = index;">
+                                            <td>{{invoiceList.length - i}}</td>
+                                            <td>{{data.PayeeName}}</td>
+                                            <td>{{data.InvoiceNo}}</td>
+                                            <td>{{data.ShopName}} <span [style.color]="'blue'" *ngIf="data.AreaName !== 'null'">({{data.
+                                                AreaName}})</span></td>
+                                            <td>{{data.PurchaseDate}}</td>
+                                            <td>{{data.GSTNo}}</td>
+                                            <td>{{data.DiscountAmount}}</td>
+                                            <td>{{data.GSTAmount}}</td>
+                                            <td>{{data.PaymentStatus}}</td>
+                                            <td>{{data.TotalAmount}}</td>
+                                            <td>{{data.DueAmount}}</td>
+                                            <td>{{data.PaidAmount}}</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
-
                         </div>
                     </div>
                 </div>
