--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -1050,6 +1050,19 @@
                         </div>
                         <div class="col-md-2 mb-0">
                             <mat-form-field class="example-full-width mb-0">
+                                <mat-label>Previous Customer Credit </mat-label>  
+                            <div class="row mt-0">
+                               <div class="col-md-3 p-0" style="height: 16px;"> 
+                                   <mat-checkbox color="primary" style="margin-left: 10px;" name="applyPayment.ApplyReturn" [(ngModel)]="applyPayment.ApplyReturn" ></mat-checkbox>
+                               </div>
+                               <div class="col-md-9 p-0">  
+                                <input type="number" style="font-size: 17px !important;" matInput name="CustomerCredit" disabled [(ngModel)]="applyPayment.CustomerCredit"   #CustomerCreditcontrol [autocomplete]="false">
+                               </div>
+                            </div>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-2 mb-0">
+                            <mat-form-field class="example-full-width mb-0">
                                 <mat-label> Card No.</mat-label>
                                 <input  style="font-size: 17px !important;" matInput name="CardNo" [(ngModel)]="applyPayment.CardNo" #CardNocontrol [autocomplete]="false">
                                 <mat-error>
@@ -1067,6 +1080,9 @@
                             </mat-form-field>
                         </div>
                         <div class="col-md-2 mb-0">
+                            
+                        </div>
+                        <!-- <div class="col-md-2 mb-0">
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>Customer Reward </mat-label>
                                 <div class="row mt-0">
@@ -1078,20 +1094,8 @@
                                     </div>
                                 </div>
                             </mat-form-field>
-                        </div>
-                        <div class="col-md-2 mb-0">
-                            <mat-form-field class="example-full-width mb-0">
-                                <mat-label>Previous Customer Credit </mat-label>  
-                            <div class="row mt-0">
-                               <div class="col-md-3 p-0" style="height: 16px;"> 
-                                   <mat-checkbox color="primary" style="margin-left: 10px;" name="applyPayment.ApplyReturn" [(ngModel)]="applyPayment.ApplyReturn" ></mat-checkbox>
-                               </div>
-                               <div class="col-md-9 p-0">  
-                                <input type="number" style="font-size: 17px !important;" matInput name="CustomerCredit" disabled [(ngModel)]="applyPayment.CustomerCredit"   #CustomerCreditcontrol [autocomplete]="false">
-                               </div>
-                            </div>
-                            </mat-form-field>
-                        </div>
+                        </div> -->
+                       
                         <div class="col-md-2 col-6">
                             <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0" mat-raised-button color="primary">Apply Payment</button>
                         </div>
@@ -1106,10 +1110,10 @@
         </form>
          <div class="row mt-3">
             <div class="col-md-5">
-                <div class="table-responsive " style="border: 1px solid #ff5100;">
+                <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;" >
                     <table
                         class="table table-striped table-hover table-sm table-bordered"
-                        style="border: 2px solid #fff !important; margin: 0;">
+                        style="border: 2px solid #fff !important; margin: 0; overflow-y: scroll; max-height: 150px;">
                         <thead>
                           <tr>
                             <th style="background-color: #ff5100; color: #fff !important;">Invoice No</th>
@@ -1129,10 +1133,10 @@
                 </div>
             </div>
             <div class="col-md-6 ms-auto">
-                <div class="table-responsive " style="border: 1px solid #ff5100;">
+                <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
                     <table
                         class="table table-striped table-hover table-sm table-bordered"
-                        style="border: 2px solid #fff !important; margin: 0;">
+                        style="border: 2px solid #fff !important; margin: 0; ">
                         <thead>
                           <tr>
                             <th>PaymentDate</th>
