--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -100,8 +100,8 @@
                         <mat-label>Balance</mat-label>
                         <div class="d-flex">
                             <input matInput style="color:red"  name="Balance" [(ngModel)]="BillMaster.DueAmount" disabled>
-                            <span *ngIf="BillMaster.PaymentStatus === 'Paid' && BillMaster.DueAmount === 0" style="border: 1px solid; padding: 0px 2px; color:green; font-weight: 600; font-size: 12px;">Paid</span>
-                            <span *ngIf="BillMaster.PaymentStatus === 'Unpaid' || BillMaster.DueAmount !== 0"style=" border: 1px solid; padding: 0px 2px; color: red; font-weight: 600; font-size: 12px; ">Unpaid</span>
+                            <span *ngIf="BillMaster.PaymentStatus == 'Paid' && BillMaster.DueAmount == 0" style="border: 1px solid; padding: 0px 2px; color:green; font-weight: 600; font-size: 12px;">Paid</span>
+                            <span *ngIf="BillMaster.PaymentStatus == 'Unpaid' || BillMaster.DueAmount != 0"style=" border: 1px solid; padding: 0px 2px; color: red; font-weight: 600; font-size: 12px; ">Unpaid</span>
                         </div>
                     </mat-form-field>
                 </div>
@@ -735,7 +735,7 @@
                         <input class="cust-input" type="number" matInput name="SGST" [(ngModel)]="sgst" disabled>
                     </mat-form-field>
                 </div> -->
-                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                <!-- <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount%</mat-label>
                         <input matInput name="AddlDiscountPercentage" (blur)="AddDiscalculate('AddlDiscountPercentage', 'discount')" type="number" [(ngModel)]="BillMaster.AddlDiscountPercentage" #AddlDiscountPercentagecontrol
@@ -744,7 +744,7 @@
                             Additional Discount is required
                         </mat-error>
                     </mat-form-field>
-                </div>
+                </div> -->
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount</mat-label>
