--- a/web/src/app/sale/bill-list/bill-list.component.html
+++ b/web/src/app/sale/bill-list/bill-list.component.html
@@ -47,23 +47,26 @@
               <!-- Bill CustomerID Wise List Of Row -->
               <div *ngIf="this.id !== '0' && user.UserGroup === 'CompanyAdmin'" class="row">
                 <div class="col-md-3 col-12 p-0 ms-3">
-                  <h2>Bill List For <span style="color:#232323;">{{this.dataList[0]?.CustomerName | titlecase }} </span> </h2>
+                  <h2>Bill List For <span style="color:#232323;">{{this.dataList[0]?.CustomerName | titlecase }} </span>
+                  </h2>
                 </div>
 
-                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2"
+                  style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Total Amount : </span>
                   <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.TotalAmountInv}}</span>
                 </div>
-                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2"
+                  style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Due Amount : </span>
                   <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.DueAmountInv}}</span>
                 </div>
-                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2"
+                  style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Paid Amount : </span>
-                  <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{this.CustomerTotal}}</span>
+                  <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.CustomerTotal}}</span>
                 </div>
-                
+
                 <div class="col-md-2 col-4 ms-auto">
                   <!-- <div class="input-group">
                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
@@ -82,9 +85,10 @@
             <div class="body mt-2 p-2">
               <div class="row">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                  <div *ngIf="this.dataList.length == 0" class="datanotFound" >Data Not Found</div>
+                  <div *ngIf="this.dataList.length == 0" class="datanotFound">Data Not Found</div>
                   <div class="table-responsive">
-                    <table *ngIf="this.dataList.length != 0" class="table table-striped table-hover table-sm table-bordered"
+                    <table *ngIf="this.dataList.length != 0"
+                      class="table table-striped table-hover table-sm table-bordered"
                       style="border: 2px solid #fff !important;">
                       <thead>
                         <tr>
@@ -119,7 +123,8 @@
                             <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
                             </button>
-                            <button title="Payment Hsitory" class="detail_icons bg-btn" (click)="openModal(content,Bdata)">
+                            <button title="Payment Hsitory" class="detail_icons bg-btn"
+                              (click)="openModal(content,Bdata)">
                               <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                 data-mdb-target="#exampleModal"> </i>
                             </button>
@@ -127,13 +132,14 @@
                               <mat-icon class="edit_icon ms-1">edit </mat-icon>
                             </button>
                             <button class="bg-btn" (click)="deleteItem(i)">
-                              <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
+                              <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
 
-                            <button  title="Payment" class="bg-btn" [routerLink]="['/sale/billing', Bdata.CustomerID ,Bdata.ID]">
+                            <button title="Payment" class="bg-btn"
+                              [routerLink]="['/sale/billing', Bdata.CustomerID ,Bdata.ID]">
                               <mat-icon class="edit_icon ms-1">attach_money </mat-icon>
                             </button>
-                            <button  title="Eye Power" class="bg-btn" >
+                            <button title="Eye Power" class="bg-btn">
                               <mat-icon class="edit_icon pt-1 ms-1">remove_red_eye</mat-icon>
                             </button>
 
@@ -178,10 +184,14 @@
   </div>
 </section>
 
-<!-- Modal -->
+<!-- costomer payment Modal -->
 <ng-template #content role="document" let-modal>
   <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
     <h2 class="modal-title header pt-2" id="exampleModalLabel">Payment Detail's</h2>
+    <button  *ngIf="this.applyPayment.PayableAmount !== 0" type="button" class="ms-5" mat-raised-button color="primary"
+      (click)="openModal12(content12)">Customer Debit
+    </button>
+
     <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body p-0">
@@ -225,12 +235,16 @@
                     <td class="ps-3">{{ i + 1 }}</td>
                     <td class="text-center">{{data.PaymentDate}}</td>
                     <td *ngIf="!UpdateMode" class="text-center">{{data.PaymentMode}}</td>
-                    <td *ngIf="UpdateMode" style=" text-align: center;">
+                    <td
+                      *ngIf="(UpdateMode && data.PaymentMode === 'Customer Credit' )|| (UpdateMode && data.PaymentMode === 'Payment Initiated')|| (UpdateMode && data.PaymentMode === 'Customer Return')"
+                      class="text-center">{{data.PaymentMode}}</td>
+                    <td
+                      *ngIf="(UpdateMode && data.PaymentMode !== 'Customer Credit' && data.PaymentMode !== 'Payment Initiated' && data.PaymentMode !== 'Customer Return')"
+                      style=" text-align: center;">
                       <select style="height: 26px;" name="PaymentMode" [(ngModel)]="data.PaymentMode" #name="ngModel"
-                        [ngModelOptions]="{standalone: true}" name="data{{i}}">
-                        <option value="Payment Initiated">Payment Initiated</option>
-                        <option value="Gpay">Gpay</option>
-                        <option value="Online">Online</option>
+                        [ngModelOptions]="{standalone: true}" name="data{{i}}"
+                        (change)="updateCustomerPaymentMode(data)">
+                        <option *ngFor="let p of PaymentModesList  let i = index;">{{p.Name }}</option>
                       </select>
                     </td>
                     <td class="text-center">{{data.Amount }}</td>
@@ -246,5 +260,47 @@
 
       </div>
     </form>
+  </div>
+</ng-template>
+
+<!-- customer retrun model  -->
+<ng-template #content12 role="document" let-modal>
+  <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+    <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer Retrun</h2>
+    <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body p-0">
+    <div class="modal-body">
+      <form #f3="ngForm" (ngSubmit)="onPaymentSubmit()">
+        <div class="row">
+          <div class="col-md-12 mb-0">
+            <mat-form-field class="example-full-width mb-0">
+              <mat-label>Paid Amount</mat-label>
+              <input type="number" style="color: rgb(255 0 0 / 75%); font-size: 17px !important;" matInput
+                name="Total Amount" value="{{ this.applyPayment.PayableAmount}}" disabled #TOutstandingcontrol
+                [autocomplete]="false">
+            </mat-form-field>
+          </div>
+          <div class="col-md-12 mb-0">
+            <mat-form-field class="example-full-width mb-0">
+              <mat-label>New Payment</mat-label>
+              <input type="number" style="font-size: 17px !important;" matInput name="PaymentAmount"
+                [(ngModel)]="applyPayment.PaidAmount" [autocomplete]="false">
+            </mat-form-field>
+          </div>
+          <div class="col-md-12 mb-0">
+            <mat-form-field class="example-full-width mb-0">
+              <mat-label>Payment Mode</mat-label>
+              <mat-select name="PayMode" [(ngModel)]="applyPayment.PaymentMode" required #GSTTypecontrol1>
+                <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList"> {{p.Name}} </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-md-12 col-6">
+            <button type="submit" [disabled]="f3.invalid" mat-raised-button color="primary">Apply Payment</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </ng-template>
