--- a/web/src/app/company-payment/payment/payment.component.html
+++ b/web/src/app/company-payment/payment/payment.component.html
@@ -15,19 +15,19 @@
                                         <mat-label>Payment Type</mat-label>
                                         <mat-select name="PaymentType" placeholder="Select Payee Type"
                                             [(ngModel)]="data.PaymentType" (selectionChange)="getPayeeList()" appAutoFoucsDirectives>
-                                            <mat-option value="Vendor">Supplier</mat-option>
+                                            <mat-option value="Supplier">Supplier</mat-option>
                                             <mat-option value="Fitter">Fitter</mat-option>
                                             <mat-option value="Doctor">Doctor</mat-option>
                                             <mat-option value="Employee">Employee</mat-option>
                                             <mat-option value="Customer">Customer</mat-option>
                                         </mat-select>
-                                        <mat-error>supplier is required</mat-error>
+                                        <mat-error>PaymentType is required</mat-error>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payee Name</mat-label>
-                                        <mat-select name="PayeeID" [(ngModel)]=" data.PayeeName" (selectionChange)="getInvoicePayment(data)">
+                                        <mat-select name="PayeeID" [(ngModel)]=" data.CustomerID" (selectionChange)="getInvoicePayment(data.PaymentType,data.PayeeName)">
                                             <mat-option [value]="s.ID" *ngFor="let s of payeeList ">
                                                 {{s.Name}} 
                                                 <span style="float: right;" *ngIf="s.MobileNo1 != 'null'">{{s.MobileNo1}}</span>
@@ -51,8 +51,8 @@
                                         <mat-label>Previous Credit</mat-label>
                                         <div class="row mt-0">
                                             <div class="col-md-3 p-0" style="height: 16px;">
-                                                <mat-checkbox color="primary" style="margin-left: 10px;" name="applyCredit"
-                                                [(ngModel)]="data.applyCredit"></mat-checkbox>
+                                                <mat-checkbox color="primary" style="margin-left: 10px;" name="ApplyReturn"
+                                                [(ngModel)]="data.ApplyReturn"></mat-checkbox>
                                             </div>
                                             <div class="col-md-9 p-0" style="height: 16px;">
                                                 <input type="number" matInput name="CustomerCredit" disabled
@@ -72,7 +72,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="data.PaymentType !== 'Customer'" class="col-xl-1 col-md-2 col-sm-12 mb-0">
+                                <div *ngIf="data.ApplyReturn === false" class="col-xl-1 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
@@ -81,12 +81,12 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="data.PaymentType === 'Customer'" class="col-xl-1 col-md-2 col-sm-12 mb-0">
+                                <div *ngIf="data.ApplyReturn === true" class="col-xl-1 col-md-2 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
                                             #GSTTypecontrol1>
-                                             <mat-option  value="Customer Return">Customer Return</mat-option>
+                                             <mat-option  value="Customer Credit">Customer Credit</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
