--- a/web/src/app/admin/company.component.css
+++ b/web/src/app/admin/company.component.css
@@ -54,3 +54,37 @@
     border: 2px solid #535353;
     color: #000;
   } */
+
+
+  .fit-picture{
+    width: 170px;
+    height: 170px;
+  }
+
+  .upload_icon {
+    font-size: 20px;
+    color: #ffffff;
+    background: #ff5100;
+    width: 171px;
+    padding-top: 2px;
+    height: 25px;
+    padding-left: 4px;
+    text-align: center;
+}
+
+  @media (max-width: 768px){
+    .fit-picture{
+      width: 100px;
+      height: 100px;
+    }
+
+    .upload_icon {
+      font-size: 20px;
+      color: #ffffff;
+      background: #ff5100;
+      width: 101px;
+      padding-top: 2px;
+      height: 25px;
+      padding-left: 4px;
+  }
+  }
