--- a/web/src/app/admin/employee/employee.component.css
+++ b/web/src/app/admin/employee/employee.component.css
@@ -59,3 +59,15 @@
     bottom: 5px;
     padding: 0px;
 }
+
+.fit-picture{
+    width: 170px;
+    height: 170px;
+  }
+
+  @media (max-width: 768px){
+    .fit-picture{
+      width: 100px;
+      height: 100px;
+    }
+  }
