--- a/web/src/app/admin/employee/employee.component.html
+++ b/web/src/app/admin/employee/employee.component.html
@@ -10,7 +10,7 @@
                     <div class="body">
                         <form autocomplete="off" #f="ngForm" (ngSubmit)="onSubmit();" >
                             <div class="row">
-                                <div class="col-md-10 col-11">
+                                <div class="col-md-10 col-12">
                                     <div class="row ">
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
@@ -139,14 +139,14 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0 mt-2 mb-3">
+                                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0 mt-md-2 mt-0 mb-3">
                                                 <button class="me-3" type="button" mat-raised-button color="primary"  [disabled]="id == 0 || !f.valid" *ngIf=" id != 0" (click)="updateUser()" >Update</button>
                                                 <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!f.valid  " *ngIf="id == 0">Save</button>
                                                 <button type="button" mat-raised-button [routerLink]="['/admin/employeeList']">Back</button>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-2 col-12 ps-md-5">
+                                <div class="col-md-2 col-12 ps-0 ps-lg-5">
                                     <div class="row">
                                         <div class="col-12 mt-1 " >
                                             <img class="fit-picture" width="170" height="170" [src]="userImage">
@@ -168,7 +168,7 @@
                             <div class="col-md-5 col-12 ps-0">
                                 <form #assignForm="ngForm" (ngSubmit)="saveUserShop();">
                                     <div class="row">
-                                        <div class="col-lg-6 ">
+                                        <div class="col-lg-6 col-md-6">
                                            <ng-select bindLabel="Shop" name="ShopID" placeholder="Select Shop" [(ngModel)]="UserShop.  ShopID" [required]="true" #ShopID="ngModel" [closeOnSelect]="true" [searchable]="true">
                                                 <ng-option [value]="s.ID" *ngFor="let s of dropShoplist">{{s.Name}}
                                                      <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'"> ({{s.AreaName}})</span>
@@ -178,7 +178,7 @@
                                              <span *ngIf="ShopID.touched && ShopID.errors" class="errorss"> Shop is required</span>
                                          </div>
 
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-6 col-md-6">
                                             <ng-select name="RoleID" placeholder="Select Role" [(ngModel)]="UserShop.RoleID" required #RoleID="ngModel" required [closeOnSelect]="true" [searchable]="true">
                                                 <ng-option [value]="r.ID" *ngFor="let r of roleList">{{r.Name}}</ng-option>
                                              </ng-select>
@@ -186,7 +186,7 @@
                                             <span *ngIf="RoleID.touched && RoleID.errors" class="errorss"> Role is rquired</span>
                                         </div>
                                     </div>
-                                    <div class="row mt-2">
+                                    <div class="row mt-md-2 mt-0">
                                         <div class="col-lg-12">
                                             <button type="submit" class="me-3" mat-raised-button color="primary"
                                                 [disabled]="!assignForm.valid || this.saveUpdateHide" >Save </button>
@@ -198,7 +198,7 @@
                                     </div>
                                 </form>
                             </div>
-                            <div class="table-container col-md-7 col-12"
+                            <div class="table-container col-md-7 col-12 p-0"
                                 style="overflow-x:auto;overflow:auto;height:200px;">
                                 <table class="table table-striped table-hover table-sm table-bordered"
                                 style="border: 2px solid #fff !important;">
