--- a/web/src/app/sale/bill-list/bill-list.component.css
+++ b/web/src/app/sale/bill-list/bill-list.component.css
@@ -63,18 +63,59 @@
 
 .CreditClass{
   color: green;
+
+}
+
+.CreditClass::before {
+  content: "+";
+  margin-right: 4px;
+  background: #14a44d;
+  padding: 0px 6px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: bolder;float: left;
 }
 
 .table-striped>tbody>tr:nth-of-type(odd) td.CreditClass{
   color: green;
 }
 
+.table-striped>tbody>tr:nth-of-type(odd) td.CreditClass::before{
+  content: "+";
+  margin-right: 4px;
+  background: #14a44d;
+  padding: 0px 6px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: bolder;float: left;
+}
+
 .DebitClass{
   color: rgb(255, 0, 51);
 }
 
+.DebitClass::before{
+  content: "-";
+  margin-right: 4px;
+  background: rgb(255, 0, 51);
+  padding: 0px 7px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: bolder;float: left;
+}
+
 .table-striped>tbody>tr:nth-of-type(odd) td.DebitClass{
   color: rgb(255, 0, 51);
+}
+
+.table-striped>tbody>tr:nth-of-type(odd) td.DebitClass::before{
+  content: "-";
+  margin-right: 4px;
+  background: rgb(255, 0, 51);
+  padding: 0px 7px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: bolder;float: left;
 }
 
 
